Add header and footer images

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -16,12 +16,13 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
-                <p class="copyright text-muted small">Copyright &copy; {{ .Title }} All Rights Reserved</p>
+                <p class="copyright text-muted small">Copyright &copy; {{ .Site.Title }} All Rights Reserved</p>
             </div>
             <div class="col-md-4">
 		Built with <a href="http://gohugo.io">Hugo</a> and the
 		<a href="https://github.com/crakjie/landing-page-hugo">landing-page-hugo</a>
-		theme.
+		theme.<br />
+    <a href="https://www.flickr.com/photos/39908901@N06/7816199456/in/faves-114708437@N08/" target="_blank">"Downtown Minneapolis"</a> by <a href="https://www.flickr.com/photos/39908901@N06/" target="_blank">m01229</a> used under <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank">CC BY 2.0</a> / Darkened from original
             </div>
         </div>
     </div>
