--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,6 +13,10 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
+                        <a href="http://www.devopsdays.org/events/2016-minneapolis/" target="_blank">DevOpsDays Minneapolis</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
