--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -21,6 +21,9 @@
                     <a class="page-scroll" href="#code-of-conduct">Code of Conduct</a>
                 </li>
                 <li>
+                    <a href="http://www.devopsdays.org/events/2016-minneapolis/" target="_blank">DevOpsDays Minneapolis</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
             </ul>
